--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Ticket Scanner</string>
+    <string name="app_name">Ticket Scanner v.1.10</string>
 </resources>
